unpackaged/main/default/objects/Account/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Account ID</label>
    <type>AutoNumber</type>
</CustomField>