unpackaged/main/default/objects/Account/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>if(NOT(ISBLANK(BillingStreet)),BillingStreet ,&#39;&#39;) + if(NOT(ISBLANK(BillingCity)),&#39;, &#39;+BillingCity ,&#39;&#39;) +
if(NOT(ISBLANK(BillingState)),&#39;, &#39;+BillingState ,&#39;&#39;) +
if(NOT(ISBLANK(BillingCountry)),&#39;, &#39;+BillingCountry ,&#39;&#39;)+
if(NOT(ISBLANK(BillingPostalCode)),&#39;, &#39;+BillingPostalCode ,&#39;&#39;)</formula>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>