unpackaged/main/default/objects/Account/fields/Birthdate_Text__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Text__c</fullName>
    <label>Birthdate Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>