unpackaged/main/default/objects/Account/fields/Business_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>