unpackaged/main/default/objects/Account/fields/Client_No__c.field-meta.xml
<CustomField>
    <fullName>Client_No__c</fullName>
    <formula>If(  RecordType.DeveloperName == &#39;Client&#39;,Account_ID__c,&#39;&#39;)</formula>
    <label>Client No</label>
    <type>Text</type>
</CustomField>