unpackaged/main/default/objects/Account/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>