unpackaged/main/default/objects/Account/fields/Created_For_All_Lookup_Search__c.field-meta.xml
<CustomField>
    <fullName>Created_For_All_Lookup_Search__c</fullName>
    <label>Created For All Lookup Search</label>
    <length>3</length>
    <type>Text</type>
</CustomField>