unpackaged/main/default/objects/Account/fields/DOB_Estimate__c.field-meta.xml
<CustomField>
    <fullName>DOB_Estimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOB Estimate</label>
    <type>Checkbox</type>
</CustomField>