unpackaged/main/default/objects/Account/fields/DOD_Estimate__c.field-meta.xml
<CustomField>
    <fullName>DOD_Estimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOD Estimate</label>
    <type>Checkbox</type>
</CustomField>