unpackaged/main/default/objects/Account/fields/Duplicate_Key__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Key__c</fullName>
    <inlineHelpText>To merge two individual accounts, add a Random Identical text string into the &#39;Duplicate Key&#39; field for both records. Salesforce will promote you to merge after.</inlineHelpText>
    <label>Duplicate Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>