unpackaged/main/default/objects/Account/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acehnese</fullName>
            </value>
            <value>
                <fullName>Afghan</fullName>
            </value>
            <value>
                <fullName>African American</fullName>
            </value>
            <value>
                <fullName>Afrikaner</fullName>
            </value>
            <value>
                <fullName>Akan</fullName>
            </value>
            <value>
                <fullName>Albanian</fullName>
            </value>
            <value>
                <fullName>Algerian</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Amhara</fullName>
            </value>
            <value>
                <fullName>Anglo-Burmese</fullName>
            </value>
            <value>
                <fullName>Anglo-Indian</fullName>
            </value>
            <value>
                <fullName>Angolan</fullName>
            </value>
            <value>
                <fullName>Arab, n.e.c.</fullName>
            </value>
            <value>
                <fullName>Argentinian</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Assyrian/Chaldean</fullName>
            </value>
            <value>
                <fullName>Australian</fullName>
            </value>
            <value>
                <fullName>Australian Aboriginal</fullName>
            </value>
            <value>
                <fullName>Australian South Sea Islander</fullName>
            </value>
            <value>
                <fullName>Austrian</fullName>
            </value>
            <value>
                <fullName>Azeri</fullName>
            </value>
            <value>
                <fullName>Balinese</fullName>
            </value>
            <value>
                <fullName>Barbadian</fullName>
            </value>
            <value>
                <fullName>Basque</fullName>
            </value>
            <value>
                <fullName>Batswana</fullName>
            </value>
            <value>
                <fullName>Belarusan</fullName>
            </value>
            <value>
                <fullName>Belgian</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Berber</fullName>
            </value>
            <value>
                <fullName>Bermudan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>