unpackaged/main/default/objects/Account/fields/Indigenous__c.field-meta.xml
<CustomField>
    <fullName>Indigenous__c</fullName>
    <label>Indigenous</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aboriginal</fullName>
            </value>
            <value>
                <fullName>Aboriginal &amp;TSI</fullName>
            </value>
            <value>
                <fullName>TSI only</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>