unpackaged/main/default/objects/Account/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aboriginal English, so described</fullName>
            </value>
            <value>
                <fullName>Aboriginal Languages</fullName>
            </value>
            <value>
                <fullName>Adnymathanha</fullName>
            </value>
            <value>
                <fullName>African Languages nec</fullName>
            </value>
            <value>
                <fullName>Afrikaans</fullName>
            </value>
            <value>
                <fullName>Alawa</fullName>
            </value>
            <value>
                <fullName>Albanian</fullName>
            </value>
            <value>
                <fullName>Alngith</fullName>
            </value>
            <value>
                <fullName>Alyawarr</fullName>
            </value>
            <value>
                <fullName>Amharic</fullName>
            </value>
            <value>
                <fullName>Amurdak</fullName>
            </value>
            <value>
                <fullName>Anindilyakwa</fullName>
            </value>
            <value>
                <fullName>Anmatyerr, nec</fullName>
            </value>
            <value>
                <fullName>Antekerrepenh</fullName>
            </value>
            <value>
                <fullName>Antikarinya</fullName>
            </value>
            <value>
                <fullName>Arabana</fullName>
            </value>
            <value>
                <fullName>Arabic (including Lebanese)</fullName>
            </value>
            <value>
                <fullName>Arandic, nec</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Arnhem Land and Daly River Region Languages, nec</fullName>
            </value>
            <value>
                <fullName>Arrernte, nec</fullName>
            </value>
            <value>
                <fullName>Assyrian (including Aramaic)</fullName>
            </value>
            <value>
                <fullName>Baanbay</fullName>
            </value>
            <value>
                <fullName>Badimaya</fullName>
            </value>
            <value>
                <fullName>Balochi</fullName>
            </value>
            <value>
                <fullName>Bandjalang</fullName>
            </value>
            <value>
                <fullName>Banyjima</fullName>
            </value>
            <value>
                <fullName>Barababaraba</fullName>
            </value>
            <value>
                <fullName>Bardi</fullName>
            </value>
            <value>
                <fullName>Basque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>