unpackaged/main/default/objects/Account/fields/Medicare_Provider__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Provider__c</fullName>
    <label>Medicare Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>