unpackaged/main/default/objects/Account/fields/No_Fixed_Address__c.field-meta.xml
<CustomField>
    <fullName>No_Fixed_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Fixed Address</label>
    <type>Checkbox</type>
</CustomField>