unpackaged/main/default/objects/Account/fields/Not_Disclosed__c.field-meta.xml
<CustomField>
    <fullName>Not_Disclosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Disclosed</label>
    <type>Checkbox</type>
</CustomField>