unpackaged/main/default/objects/Account/fields/Pension_Type__c.field-meta.xml
<CustomField>
    <fullName>Pension_Type__c</fullName>
    <label>Pension Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disabililty Pension</fullName>
            </value>
            <value>
                <fullName>Child related</fullName>
            </value>
            <value>
                <fullName>Aged Pension</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>