unpackaged/main/default/objects/Account/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <label>Preferred Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>