unpackaged/main/default/objects/Account/fields/Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address__c</fullName>
    <formula>if(NOT(ISBLANK(PersonMailingStreet)),PersonMailingStreet ,&#39;&#39;) + if(NOT(ISBLANK(PersonMailingCity)),&#39;, &#39;+PersonMailingCity ,&#39;&#39;) +
if(NOT(ISBLANK(PersonMailingState)),&#39;, &#39;+PersonMailingState ,&#39;&#39;) +
if(NOT(ISBLANK(PersonMailingCountry)),&#39;, &#39;+PersonMailingCountry ,&#39;&#39;)+
if(NOT(ISBLANK(PersonMailingPostalCode)),&#39;, &#39;+PersonMailingPostalCode ,&#39;&#39;)</formula>
    <label>Residential Address</label>
    <type>Text</type>
</CustomField>