unpackaged/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Deceased</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>