unpackaged/main/default/objects/Account/validationRules/Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Client&#39;,
OR( ISBLANK(FirstName),
ISBLANK(PersonMailingCity),ISBLANK(PersonMailingStreet),
ISBLANK(PersonMailingState),ISBLANK(PersonMailingCountry),
ISBLANK(PersonMailingPostalCode)))</errorConditionFormula>
    <errorMessage>First Name and full Residential address are mandatory.</errorMessage>
</ValidationRule>