unpackaged/main/default/objects/Account/listViews/All_Agencies.listView-meta.xml
<ListView>
    <fullName>All_Agencies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>SOURCE_SYSTEM_IDENTIFIER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Agency</value>
    </filters>
    <label>All Agencies</label>
</ListView>