unpackaged/main/default/objects/Account/listViews/All_Clients.listView-meta.xml
<ListView>
    <fullName>All_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>PC_BIRTHDATE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Client</value>
    </filters>
    <label>All Clients</label>
</ListView>