unpackaged/main/default/objects/Account/listViews/All_Service_Providers.listView-meta.xml
<ListView>
    <fullName>All_Service_Providers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Business_Email__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Service_Provider</value>
    </filters>
    <label>All Service Providers</label>
</ListView>