unpackaged/main/default/objects/Account/listViews/All_Teams.listView-meta.xml
<ListView>
    <fullName>All_Teams</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Team</value>
    </filters>
    <label>All Teams</label>
</ListView>